[project]
name = "surf-controller"
version = "0.2.1"
description = "CLI interface to control SURF VMs"
authors = [
    { name = "Raoul Grouls", email = "Raoul.Grouls@han.nl" }
]
dependencies = [
    "requests>=2.32.3",
]
readme = "README.md"
requires-python = ">= 3.11"

[project.scripts]
"surfcontroller" = "surf_controller.gui:main"

[tools.urls]
GitHub = "https://github.com/raoulg/surfcontroller"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/surf_controller"]
